--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+  "scripts": {
+  "start": "docusaurus start",
+  "build": "docusaurus build",
+  "serve": "docusaurus serve",
+  "deploy": "docusaurus deploy"
+}
+
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
