--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -6,7 +6,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "serve": "docusaurus serve",
-    "deploy": "docusaurus deploy"
+    "deploy": "npx docusaurus deploy"
+
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
